--- a/index.html
+++ b/index.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AirBnB Home</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body></body>
-</html>
+<head>
+  <link rel="stylesheet" href="styles.css" />
+  <title>AirBnb</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="" width="device-width," initial-scale="1.0" />
+</head>
+
+<header class="header">
+  <section class="navSearchBar">
+    <div class="navSvg">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 32 32"
+        style="display: block; height: 20px; width: 20px; fill: currentColor"
+        aria-hidden="true"
+        role="presentation"
+        focusable="false"
+      >
+        <path
+          d="M13 0a13 13 0 0 1 10.5 20.67l7.91 7.92-2.82 2.82-7.92-7.91A12.94 12.94 0 0 1 13 26a13 13 0 1 1 0-26zm0 4a9 9 0 1 0 0 18 9 9 0 0 0 0-18z"
+        ></path>
+      </svg>
+    </div>
+    <div class="searchText1">Anywhere</div>
+    <div class="searchText2">Any week • Add guests</div>
+  </section>
+  <section class="navFilterBtn">
+    <div class="filterIcon">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 32 32"
+        aria-hidden="true"
+        role="presentation"
+        focusable="false"
+        style="
+          display: block;
+          fill: none;
+          height: 16px;
+          width: 16px;
+          stroke: currentcolor;
+          stroke-width: 4;
+          overflow: visible;
+        "
+        class="st-current"
+      >
+        <path
+          fill="none"
+          d="M7 16H3m26 0H15M29 6h-4m-8 0H3m26 20h-4M7 16a4 4 0 1 0 8 0 4 4 0 0 0-8 0zM17 6a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 20a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 0H3"
+          class=""
+        ></path>
+      </svg>
+    </div>
+  </section>
+</header>
+<body></body>
+<footer></footer>
