--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="" width="device-width," initial-scale="1.0" />
 </head>
 
-<header class="header">
+<nav class="nav">
   <section class="navSearchBar">
     <div class="navSvg">
       <svg
@@ -25,6 +25,7 @@
     <div class="searchText1">Anywhere</div>
     <div class="searchText2">Any week • Add guests</div>
   </section>
+
   <section class="navFilterBtn">
     <div class="filterIcon">
       <svg
@@ -52,6 +53,89 @@
       </svg>
     </div>
   </section>
-</header>
+
+  <section class="iconCarousel">
+    <section class="iconPositioning">
+      <div class="navIcon">
+        <div class="navIcon">
+          <img
+            class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg"
+            alt=""
+            width="24"
+            height="24"
+          />
+          <p class="iconTxt">Cabins</p>
+        </div>
+      </div>
+
+      <div class="navIcon">
+        <div class="navIcon">
+          <img
+            class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/6ad4bd95-f086-437d-97e3-14d12155ddfe.jpg"
+            alt=""
+            width="24"
+            height="24"
+          />
+          <p class="iconTxt">Countryside</p>
+        </div>
+      </div>
+
+      <div class="navIcon">
+        <div class="navIcon">
+          <img
+            class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg"
+            alt=""
+            width="24"
+            height="24"
+          />
+          <p class="iconTxt">Amazing views</p>
+        </div>
+      </div>
+
+      <div class="navIcon">
+        <div class="navIcon">
+          <img
+            class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/50861fca-582c-4bcc-89d3-857fb7ca6528.jpg"
+            alt=""
+            width="24"
+            height="24"
+          />
+          <p class="iconTxt">Design</p>
+        </div>
+      </div>
+
+      <div class="navIcon">
+        <div class="navIcon">
+          <img
+            class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/f60700bc-8ab5-424c-912b-6ef17abc479a.jpg"
+            alt=""
+            width="24"
+            height="24"
+          />
+          <p class="iconTxt">Barns</p>
+        </div>
+      </div>
+
+      <div class="navIcon">
+        <div class="navIcon">
+          <img
+            class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+            src="https://a0.muscache.com/pictures/c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg"
+            alt=""
+            width="24"
+            height="24"
+          />
+          <p class="iconTxt">OMG!</p>
+        </div>
+      </div>
+    </section>
+  </section>
+</nav>
+
 <body></body>
 <footer></footer>
