--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </section>
 
   <section class="navFilterBtn">
-    <div class="filterIcon">
+    <div class="filterBtn">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 32 32"
@@ -183,5 +183,113 @@
       </span>
     </div>
   </section>
+
+  <section class="cardSection">
+      <div class="heartIcon">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"><path d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z"></path>
+        </svg>
+      </div>
+      <img class="imgSize" aria-hidden="true" elementtiming="LCP-target" fetchpriority="high" loading="eager" src="https://a0.muscache.com/im/pictures/miso/Hosting-14300924/original/ef816722-97a7-4bcb-b073-09ef8ebe05a9.jpeg?im_w=720" data-original-uri="https://a0.muscache.com/im/pictures/miso/Hosting-14300924/original/ef816722-97a7-4bcb-b073-09ef8ebe05a9.jpeg?im_w=720" style="--dls-liteimage-object-fit: cover;">
+    </div>
+    <div class="propertyInfo">
+      <p>
+        <strong>Boarshed, UK</strong> <br />
+        Individual host <br />
+        24-29 Jan <br />
+        <span class="price">£4,684 total</span>
+      </p>
+    </div>
+    <div>
+      <span class="ratings">4.55</span>
+      <span class="starIcon"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 32 32"
+          aria-hidden="true"
+          role="presentation"
+          focusable="false"
+          style="display: block; height: 14px; width: 14px; fill: currentcolor"
+        >
+          <path
+            fill-rule="evenodd"
+            d="m15.1 1.58-4.13 8.88-9.86 1.27a1 1 0 0 0-.54 1.74l7.3 6.57-1.97 9.85a1 1 0 0 0 1.48 1.06l8.62-5 8.63 5a1 1 0 0 0 1.48-1.06l-1.97-9.85 7.3-6.57a1 1 0 0 0-.55-1.73l-9.86-1.28-4.12-8.88a1 1 0 0 0-1.82 0z"
+          ></path>
+        </svg>
+      </span>
+    </div>
+  </section>
+
+  <section class="cardSection">
+    <div class="guestFav">
+      <span class="guestTxt">Guest favourite</span>
+    </div>
+    <div class="heartIcon">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"><path d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z"></path>
+      </svg>
+    </div>
+    <img class="imgSize" aria-hidden="true" alt="Show all photos" elementtiming="FMP-target" id="FMP-target" src="https://a0.muscache.com/im/pictures/miso/Hosting-869304689145832146/original/f8814cf6-6edc-4036-9013-bb8bd8839813.jpeg?im_w=720" data-original-uri="https://a0.muscache.com/im/pictures/miso/Hosting-869304689145832146/original/f8814cf6-6edc-4036-9013-bb8bd8839813.jpeg" data-shared-element-id="listing-869304689145832146-hero-image" style="--dls-liteimage-object-fit: cover;">  </div>
+  <div class="propertyInfo">
+    <p>
+      <strong>Waterside Manor, UK</strong> <br />
+      Individual host <br />
+      27-31 Jan <br />
+      <span class="price">£7,601 total</span>
+    </p>
+  </div>
+  <div>
+    <span class="ratings">5.0</span>
+    <span class="starIcon"
+      ><svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 32 32"
+        aria-hidden="true"
+        role="presentation"
+        focusable="false"
+        style="display: block; height: 14px; width: 14px; fill: currentcolor"
+      >
+        <path
+          fill-rule="evenodd"
+          d="m15.1 1.58-4.13 8.88-9.86 1.27a1 1 0 0 0-.54 1.74l7.3 6.57-1.97 9.85a1 1 0 0 0 1.48 1.06l8.62-5 8.63 5a1 1 0 0 0 1.48-1.06l-1.97-9.85 7.3-6.57a1 1 0 0 0-.55-1.73l-9.86-1.28-4.12-8.88a1 1 0 0 0-1.82 0z"
+        ></path>
+      </svg>
+    </span>
+  </div>
+</section>
+
+<section class="cardSection">
+  <div class="heartIcon">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"><path d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z"></path>
+    </svg>
+  </div>
+  <img class="imgSize" aria-hidden="true" elementtiming="LCP-target" fetchpriority="auto" loading="eager" src="https://a0.muscache.com/im/pictures/miso/Hosting-34808487/original/f325c6a1-5033-4cd4-ac31-d63c2e713668.jpeg?im_w=720" data-original-uri="https://a0.muscache.com/im/pictures/miso/Hosting-34808487/original/f325c6a1-5033-4cd4-ac31-d63c2e713668.jpeg?im_w=720" style="--dls-liteimage-object-fit: cover;"><div class="propertyInfo">
+  <p>
+    <strong>Mayfield, UK</strong> <br />
+    Individual host <br />
+    24-31 Jan <br />
+    <span class="price">£821 total</span>
+  </p>
+</div>
+<div>
+  <span class="ratings">5.0</span>
+  <span class="starIcon"
+    ><svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 32 32"
+      aria-hidden="true"
+      role="presentation"
+      focusable="false"
+      style="display: block; height: 14px; width: 14px; fill: currentcolor"
+    >
+      <path
+        fill-rule="evenodd"
+        d="m15.1 1.58-4.13 8.88-9.86 1.27a1 1 0 0 0-.54 1.74l7.3 6.57-1.97 9.85a1 1 0 0 0 1.48 1.06l8.62-5 8.63 5a1 1 0 0 0 1.48-1.06l-1.97-9.85 7.3-6.57a1 1 0 0 0-.55-1.73l-9.86-1.28-4.12-8.88a1 1 0 0 0-1.82 0z"
+      ></path>
+    </svg>
+  </span>
+</div>
+</section>
+
 </body>
 <footer></footer>
+
+
