added structure to the footer section with some css

--- a/index.html
+++ b/index.html
@@ -407,8 +407,67 @@
 </div>
 </section>
 
+<section class="showMoreFullContainer">
+  
+<div class="textContainer">
+  <div class="showMoreTxt">Continue exploring amazing views</div>
+</div>
+
+<div class="showMoreBtnContainer">
+  <div>
+  <button class="showMoreBtn">Show More</button>
+</div>
+</div>
+</section>
+
 </body>
-<footer></footer>
+<footer class="footerContainer">
+
+  <section class="supportInfo"> 
+    <h3 class="footerHeader">Support</h3>
+    <div class="footerList">
+      <ul>
+      <li>Help centre</li>
+      <li>Get help with a safety issue</li>
+      <li>AirCover</li>
+      <li>Anti-discrimination</li>
+      <li>Disability support</li>
+      <li>Cancellation options</li>
+      <li>Report neighbourhood concern</li>
+    </ul>
+  </section>
+
+  <section class="hostingInfo">
+    <h3 class="footerHeader">Hosting</h3>
+      <div class="footerList">
+        <ul>
+        <li>Airbnb your home</li>
+        <li>AirCover for hosts</li>
+        <li>Hosting resources</li>
+        <li>Community forum</li>
+        <li>Hosting responsibly</li>
+      </ul>
+   </section>
+
+  <section class="airBnbInfo"> 
+    <h3 class="footerHeader">AirBnb</h3>
+    <div class="footerList">
+      <ul>
+      <li>Newsroom</li>
+      <li>New features</li>
+      <li>Careers</li>
+      <li>Investors</li>
+      <li>Gift cards</li>
+      <li>Airbnb org</li>
+    </ul>
+    </div>
+  </section>
+  
+  <section class="siteInfo"> 
+    <div></div>
+  </section>
+
+</footer>
 
 
 
