more css tweaks and added an extra icon to the carousel

--- a/index.html
+++ b/index.html
@@ -61,19 +61,6 @@
           <div>
             <img
               class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-              src="https://a0.muscache.com/pictures/732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg"
-              alt=""
-              width="24"
-              height="24"
-            />
-            <p class="iconTxt">Cabins</p>
-          </div>
-        </div>
-
-        <div class="iconTxtContainer">
-          <div>
-            <img
-              class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
               src="https://a0.muscache.com/pictures/6ad4bd95-f086-437d-97e3-14d12155ddfe.jpg"
               alt=""
               width="24"
@@ -87,12 +74,12 @@
           <div>
             <img
               class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-              src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg"
+              src="https://a0.muscache.com/pictures/732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg"
               alt=""
               width="24"
               height="24"
             />
-            <p class="iconTxt">Amazing views</p>
+            <p class="iconTxt">Cabins</p>
           </div>
         </div>
 
@@ -106,6 +93,19 @@
               height="24"
             />
             <p class="iconTxt">Design</p>
+          </div>
+        </div>
+
+        <div class="iconTxtContainer">
+          <div>
+            <img
+              class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+              src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg"
+              alt=""
+              width="24"
+              height="24"
+            />
+            <p class="iconTxt">Amazing views</p>
           </div>
         </div>
 
@@ -139,6 +139,19 @@
           <div>
             <img
               class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+              src="https://a0.muscache.com/pictures/5ed8f7c7-2e1f-43a8-9a39-4edfc81a3325.jpg"
+              alt="coffee-mug"
+              width="24"
+              height="24"
+            />
+            <p class="iconTxt">Bed & Breakfasts</p>
+          </div>
+        </div>
+
+        <div class="iconTxtContainer">
+          <div>
+            <img
+              class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
               src="https://a0.muscache.com/pictures/687a8682-68b3-4f21-8d71-3c3aef6c1110.jpg"
               alt=""
               width="24"
@@ -149,17 +162,13 @@
         </div>
 
         <div class="iconTxtContainer">
-          <div>
-            <img
-              class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-              src="https://a0.muscache.com/pictures/5ed8f7c7-2e1f-43a8-9a39-4edfc81a3325.jpg"
-              alt="coffee-mug"
-              width="24"
-              height="24"
-            />
-            <p class="iconTxt">Bed & Breakfasts</p>
-          </div>
+        <div>
+          <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr" src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="" width="24" height="24">
+          <p class="iconTxt">Amazing pools</p>
         </div>
+      </div>
+    </div>
+
       </section>
     </section>
   </nav>
