completed the footer section and added a folder of optimsed images

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </section>
   </nav>
 
-  <div class="popUpMenuContainer1">
+  <section class="popUpMenuContainer1">
     <div class="learnAboutContainer">
       <span class="learnTxt">Learn about Guest Favourites</span>
     </div>
@@ -309,7 +309,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <body>
     <section class="cardSection">
       <div class="heartIconContainer">
